--- a/src/app/shared/components/admin-layout/admin-layout.component.html
+++ b/src/app/shared/components/admin-layout/admin-layout.component.html
@@ -3,7 +3,7 @@
         <h1 class="page-title">{{ "ADMIN.TITLE" | translate }}</h1>
     </div>
     <div class="wrapper">
-        <aside>
+        <aside class="tab-container">
             <mat-nav-list>
                 <div>
                     <a mat-list-item
