--- a/src/app/modules/asimov-admin/pages/robot-manager/csv-upload-box/csv-upload-box.component.css
+++ b/src/app/modules/asimov-admin/pages/robot-manager/csv-upload-box/csv-upload-box.component.css
@@ -58,3 +58,19 @@
     background-color: #F44336 !important;
     color: white !important;
 }
+
+@media (max-width: 778px) {
+    .upload-box {
+        border: 2px dashed #cccccc;
+        border-radius: 8px;
+        padding: 15px;
+        text-align: center;
+        color: #666;
+        font-family: 'Arial', sans-serif;
+        transition: all 0.3s ease-in-out;
+        cursor: pointer;
+        background-color: #f9f9f9;
+        margin: 20px 0;
+        width: 72.5%;
+    }
+}
