--- a/src/app/modules/asimov-admin/pages/robot-manager/csv-upload-box/csv-upload-box.component.html
+++ b/src/app/modules/asimov-admin/pages/robot-manager/csv-upload-box/csv-upload-box.component.html
@@ -3,10 +3,12 @@
     [class.is-dragging]="isDragging"
     (dragover)="onDragOver($event)"
     (dragleave)="onDragLeave($event)"
-    (drop)="onDrop($event)">
+    (drop)="onDrop($event)"
+    (click)="onContainerClick()">
 
-    <p>Arrastra y suelta tu archivo CSV aquí</p>
+    <p>Arrastra y suelta tu archivo CSV aquí (o haga click)</p>
     <p>o</p>
     <input type="file" (change)="onFileSelected($event)" accept=".csv">
     <p class="file-type-hint">Solo archivos .csv son soportados</p>
+    <input type="file" #fileInput style="display: none;" (change)="onFileSelected($event)" multiple>
 </div>
