--- a/src/app/modules/asimov-admin/pages/encounters/encounters.component.html
+++ b/src/app/modules/asimov-admin/pages/encounters/encounters.component.html
@@ -190,8 +190,10 @@
                   <button mat-raised-button
                           color="accent"
                           (click)="saveCurrentState()"
-                          class="save-button">
-                      <mat-icon>save</mat-icon>
+                          class="save-button"
+                          [disabled]="uploading"
+                  >
+                      <mat-icon>{{ uploading ? "progress_activity" : "save" }}</mat-icon>
                       Guardar Estado Actual
                   </button>
               </div>
