chore: no linkedin needed

--- a/src/app/modules/team-request/pages/team-request.component.html
+++ b/src/app/modules/team-request/pages/team-request.component.html
@@ -27,7 +27,7 @@
                                         <mdb-icon fab icon="linkedin" class="mr-1" required></mdb-icon>
                                         {{ 'PROFILE.LABELS.LINKEDIN' | translate }}:
                                     </mat-label>
-                                    <input name="linkedin" type="text" id="linkedin" required matInput [(ngModel)]="changedUser.linkedin">
+                                    <input name="linkedin" type="text" id="linkedin" matInput [(ngModel)]="changedUser.linkedin">
                                 </mat-form-field>
                             </div>
                         </div>
