feat(ieeextreme): redisigned page. Still missing sponsors udpate0

--- a/src/app/modules/ieeextreme/pages/ieeextreme/ieeextreme.component.css
+++ b/src/app/modules/ieeextreme/pages/ieeextreme/ieeextreme.component.css
@@ -1,8 +1,18 @@
+@import url('https://unpkg.com/swiper/swiper-bundle.css');
+
 .info {
-    margin-bottom: 4rem;
     display: flex;
     justify-content: space-between;
     align-items:center;
+}
+
+.info-reversed {
+    margin-top: -4rem;
+}
+
+.event-invitation-container {
+    display: flex;
+    flex-direction: row;
 }
 
 .sponsor-team {
@@ -10,13 +20,36 @@
     justify-content:center;
 }
 
+.carousel-container {
+    width: 35%;
+    align-self: start;
+}
+
+.invitation-text-container {
+    display: flex;
+    flex-direction: column;
+    width: 65%;
+    margin-left: auto;
+}
+
 /* Flex */
 @media (max-width: 950px) {
     body {
         padding-top: 20%;
     }
-    .info {
+    .event-invitation-container {
+        display: flex;
         flex-direction: column;
+    }
+    .carousel-container {
+        width: 100%;
+    }
+    .invitation-text-container {
+        width: 100%;
+    }
+        .info {
+        flex-direction: column;
+        margin-bottom: 3rem;
     }
     .info-reversed {
         display: flex;
