--- a/src/app/modules/ieeextreme/pages/ieeextreme/ieeextreme.component.html
+++ b/src/app/modules/ieeextreme/pages/ieeextreme/ieeextreme.component.html
@@ -11,27 +11,28 @@
 
   <!-- INSCRIPTION section -->
   <app-event-inscription-section [dates]="event?.dates" [inscriptionLink]="event?.inscriptionLink"/>
-  <div class="d-flex flex-row">
-      <div class="w-50">
+  <div class="event-invitation-container">
+      <div class="carousel-container">
           <app-event-section title="{{ 'IOT.GALLERY_TITLE' | translate }}">
               <app-image-carousel [imageLinks]="imageLinks"/>
           </app-event-section>
+          <span></span>
       </div>
-      <div class="d-flex flex-column w-50 ml-auto">
+      <div class="invitation-text-container">
         <!-- Resolve problemas en equipo -->
         <div class="info">
             <app-event-section title="{{ 'IEEEXTREME.TEAM.TITLE' | translate }}">
               <p>{{ 'IEEEXTREME.TEAM.TEXT' | translate }}</p>
             </app-event-section>
             <div>
-              <img src="../../../../../assets/image/events/ieeextreme/teamdisc_black.png" height="160vmin" alt="Logo ITBA-IEEE">
+              <img src="../../../../../assets/image/events/ieeextreme/tackle-problems-as-a-team.png" height="160vmin" alt="Logo ITBA-IEEE">
             </div>
           </div>
 
           <!-- Queres participar -->
           <div class="info-reversed">
             <div style="padding-right:3rem;">
-              <img src="../../../../../assets/image/events/ieeextreme/tournament_black.png" height="160vmin" alt="Logo ITBA-IEEE">
+              <img src="../../../../../assets/image/events/ieeextreme/want-to-participate.png" height="140vmin" alt="Logo ITBA-IEEE">
             </div>
             <app-event-section title="{{ 'IEEEXTREME.PARTICIPATE.TITLE' | translate }}">
               <p>{{ 'IEEEXTREME.PARTICIPATE.TEXT' | translate }}</p>
@@ -49,20 +50,20 @@
   </app-event-section>
 
   <!-- Sponsor team -->
-  <app-event-section title="Sponsorship 2024">
-    <p>{{ 'IEEEXTREME.SPONSORSHIP.TEXT' | translate }}</p>
-    <div class="sponsor-team">
-      <app-event-content-card
-      *ngFor="let contact of contacts"
-      title="{{contact.name }}"
-      [image] = "false"
-    >
-      <a content class="card-content" href="mailto:{{contact.mail}}">
-        {{contact.mail}}
-      </a>
-    </app-event-content-card>
-    </div>
-  </app-event-section>
+<!--  <app-event-section title="Sponsorship 2024">-->
+<!--    <p>{{ 'IEEEXTREME.SPONSORSHIP.TEXT' | translate }}</p>-->
+<!--    <div class="sponsor-team">-->
+<!--      <app-event-content-card-->
+<!--      *ngFor="let contact of contacts"-->
+<!--      title="{{contact.name }}"-->
+<!--      [image] = "false"-->
+<!--    >-->
+<!--      <a content class="card-content" href="mailto:{{contact.mail}}">-->
+<!--        {{contact.mail}}-->
+<!--      </a>-->
+<!--    </app-event-content-card>-->
+<!--    </div>-->
+<!--  </app-event-section>-->
 
     <!-- Editor de evento -->
     <app-event-editor-button *ngIf="!!event" [event]="event" (updateEmitter)="updateEvent($event)"></app-event-editor-button>
