chore(front): fixed icon position and added official ieee website link

--- a/src/app/modules/ieeextreme/pages/ieeextreme/ieeextreme.component.html
+++ b/src/app/modules/ieeextreme/pages/ieeextreme/ieeextreme.component.html
@@ -41,6 +41,10 @@
         </div>
   </div>
 
+  <div class="d-flex justify-content-center align-content-center">
+      <h1>{{ 'IEEEXTREME.MORE_INFO' | translate }} <a href="https://ieeextreme.org/">{{ 'IEEEXTREME.CLICK_ME' | translate}}</a></h1>
+  </div>
+
   <app-event-date-section [dates]="event?.dates" />
 
   <!-- Sponsors -->
