feat(ieeextreme): added ranking access button and the ranking page style

--- a/src/app/modules/ieeextreme/pages/ieeextreme/ieeextreme.component.html
+++ b/src/app/modules/ieeextreme/pages/ieeextreme/ieeextreme.component.html
@@ -9,6 +9,10 @@
     {{ 'HOME.IEEEXTREME.TITLE' | translate }}
   </app-event-title>
 
+  <div>
+        <app-ranking-page-button [rankingPath]="'/ieeextreme-ranking'" />
+  </div>
+
   <!-- INSCRIPTION section -->
   <app-event-inscription-section [dates]="event?.dates" [inscriptionLink]="event?.inscriptionLink"/>
   <div class="event-invitation-container">
