--- a/src/app/modules/ieeextreme-ranking/pages/ranking/ranking.component.html
+++ b/src/app/modules/ieeextreme-ranking/pages/ranking/ranking.component.html
@@ -1,7 +1,6 @@
 <div class="main-container event">
     <div class="dashboard-container">
         <h1>{{ 'IEEEXTREME.RANKING.TITLE' | translate }}</h1>
-
         <div class="dashboard-content">
             <div class="leaderboard-section">
                 <div class="leaderboard-container">
@@ -10,22 +9,23 @@
                         <tr>
                             <th class="itba-rank-column">{{ 'IEEEXTREME.RANKING.ITBA-RANK' | translate }}</th>
                             <th class="team-name-column">{{ 'IEEEXTREME.RANKING.TEAM-NAME' | translate }}</th>
+                            <th class="regional-rank-column">{{ 'IEEEXTREME.RANKING.REGIONAL-RANK' | translate }}</th>
                             <th class="country-rank-column">{{ 'IEEEXTREME.RANKING.COUNTRY-RANK' | translate }}</th>
                             <th class="global-rank-column">{{ 'IEEEXTREME.RANKING.GLOBAL-RANK' | translate }}</th>
                         </tr>
                         </thead>
                         <tbody>
-                        <!-- Sample data - todo: replace with actual data binding -->
-                        <tr *ngFor="let team of sampleTeams; let i = index">
+                        <tr #row *ngFor="let team of teams; let i = index; trackBy: trackByTeam">
                             <td class="itba-rank-column">
                                 <ng-container [ngSwitch]="i">
                                     <span *ngSwitchCase="0" class="medal gold-medal">🥇</span>
                                     <span *ngSwitchCase="1" class="medal silver-medal">🥈</span>
                                     <span *ngSwitchCase="2" class="medal bronze-medal">🥉</span>
-                                    <span *ngSwitchDefault class="rank-number">{{ team.itbaRank }}</span>
+                                    <span *ngSwitchDefault class="rank-number">{{ team.universityRank }}</span>
                                 </ng-container>
                             </td>
                             <td class="team-name-column">{{ team.name }}</td>
+                            <td class="regional-rank-column">{{ team.regionRank }}</td>
                             <td class="country-rank-column">{{ team.countryRank }}</td>
                             <td class="global-rank-column">{{ team.globalRank }}</td>
                         </tr>
